# weeveMQ

./: .gitignore  LICENCE  README.md  annotated.html  classes.html  dir_000001_000002.html  dir_235362f1dd6c9162ad9296cee38f7e99.html  dir_541eb0a6c58a7690acc5b848a4b1b724.html  dir_541eb0a6c58a7690acc5b848a4b1b724_dep.map  dir_541eb0a6c58a7690acc5b848a4b1b724_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6e195b4b3bb125aab94e81b91f5f1129.html  dir_7bb0f8765fb64056bc2f3b2aaa8873b7.html  dir_dfa8ff0c8c0a240484c54ff2b9012353.html  dir_f0ef7e4daad97e8a302038a9baaba955.html  files.html  graph_legend.html  index.html  install.sh  smpGlobalCreds_8c.html  smpGlobalCreds_8c__incl.map  smpGlobalCreds_8c__incl.md5  smpGlobalCreds_8h.html  smpGlobalCreds_8h__dep__incl.map  smpGlobalCreds_8h__dep__incl.md5  smpGlobalCreds_8h__incl.map  smpGlobalCreds_8h__incl.md5  smpGlobalCreds_8h_source.html  smpInternalUtils_8c.html  smpInternalUtils_8c__incl.map  smpInternalUtils_8c__incl.md5  smpInternalUtils_8h.html  smpInternalUtils_8h__dep__incl.map  smpInternalUtils_8h__dep__incl.md5  smpInternalUtils_8h__incl.map  smpInternalUtils_8h__incl.md5  smpInternalUtils_8h_source.html  smpInternal_8c.html  (+44 more)
WeeveClientLibrary/: .gitignore  CMakeLists.txt  CMake_Config.h.in  Doxyfile  README.md  wcl.cmake
WeeveClientLibrary/example/: CMakeLists.txt  README.md  simple_smp.c
WeeveClientLibrary/include/: wclCommon.h  wclConfig.h  wclSmp.h  wclTypes.h  wclVersion.h
WeeveClientLibrary/src/com/: wclCommon.c
WeeveClientLibrary/src/smp/: smp.c  smp.h  smpGlobalCreds.c  smpGlobalCreds.h  smpInternal.c  smpInternal.h  smpInternalUtils.c  smpInternalUtils.h
WeeveClientLibrary/src/wos/crypto/: wosCert.c  wosCryptoLibtom.c
WeeveClientLibrary/src/wos/misc/: wosLogLibC.c  wosMemoryLibC.c  wosStringLibC.c
WeeveClientLibrary/src/wos/storage/: wosStorageFile.c  wosStorageRedis.c
WeeveClientLibrary/test/: CMakeLists.txt
WeeveClientLibrary/test/data/: root.wcr  self.key  self.wcr
WeeveClientLibrary/test/module/: TestAssetsSmp.h  TestWclSmp.cpp
WeeveClientLibrary/test/unit/: TestWosCert.cpp  TestWosCrypto.cpp  TestWosMemory.cpp  TestWosStorage.cpp  TestWosString.cpp
WeeveClientLibrary/tool/: CMakeLists.txt  WeeveCertificateTool.c
WeeveCommon/: .gitignore  CMakeLists.txt  README.md  wos.cmake
WeeveCommon/include/: wosCborCert.h  wosCert.h  wosCommon.h  wosCrypto.h  wosLog.h  wosMemory.h  wosMsgCommon.h  wosMsgSmp.h  wosStorage.h  wosString.h  wosTypes.h
WeeveCommon/scripts/: README.md
WeeveCommon/src/msg/cbor/: msgCborUtils.c  msgCborUtils.h  wosCborCert.c  wosMsgSmp.c
WeeveCommon/test/: CMakeLists.txt  CMakeLists.txt.in  README.md  gtest.cmake
WeeveCommon/test/unit/: TestCborCert.cpp  TestMsgSmpCbor.cpp
WeeveMQTTSClient/: .gitignore  HowToRunDemo.md  README.md
WeeveMQTTSClient/mosquitto-1.5.2/: CMakeLists.txt
WeeveMQTTSClient/mosquitto-1.5.2/client/: CMakeLists.txt
WeeveMQTTSClient/mosquitto-1.5.2/lib/: CMakeLists.txt  connect.c  mosquitto.c  mosquitto_internal.h  packet_mosq.c
WeeveMQTTSClient/mosquitto-1.5.2/src/: CMakeLists.txt  context.c  mosquitto.c
WeeveMQTTSClient/wcl/test_data/broker/: root.wcr  self.key  self.wcr
WeeveMQTTSClient/wcl/test_data/publisher/: self.key  self.wcr
WeeveMQTTSClient/wcl/test_data/subscriber/: self.key  self.wcr
search/: all_1.js  all_2.js  classes_1.js  files_0.js  files_1.js  searchdata.js
